...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <com.parse.ParseImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/profileImage"
        android:baselineAlignBottom="false"
        android:contextClickable="false"
        android:background="@drawable/textborder"
        android:src="@drawable/exam"
        android:layout_alignTop="@+id/scrollView"
        android:layout_centerHorizontal="true" />
...
