<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:windowSoftInputMode="adjustResize"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignUpActivity">



    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_below="@+id/firstnamefield"
        android:layout_alignLeft="@+id/firstnamefield"
        android:layout_alignStart="@+id/firstnamefield"
        android:backgroundTint="#6599FF" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_below="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#6599FF" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/messagebutton"
        android:textSize="30dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TabWidget"
        android:text="Stinder"
        android:id="@+id/Stinder"
        android:nestedScrollingEnabled="false"
        android:textSize="@dimen/design_fab_size_normal"
        android:textColor="#6599FF"
        android:typeface="sans"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textStyle="bold"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter your information"
        android:id="@+id/textView3"
        android:layout_marginTop="46dp"
        android:textSize="22dp"
        android:textColor="#6599FF"
        android:textStyle="italic"
        android:layout_below="@+id/Stinder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:ems="10"
        android:id="@+id/firstnamefield"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:backgroundTint="#6599FF" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Last Name"
        android:ems="10"
        android:id="@+id/lastnamefield"
        android:backgroundTint="#6599FF"
        android:layout_above="@+id/emailField"
        android:layout_alignRight="@+id/emailField"
        android:layout_alignEnd="@+id/emailField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:backgroundTint="#6599FF"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:background="@drawable/backbutton"
        android:layout_alignBottom="@+id/Stinder"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Stinder" />

</RelativeLayout>